[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LobbyScript.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 3 )
script = ExtResource( 1 )

[node name="Client" type="Button" parent="."]
margin_top = 25.0
margin_right = 90.0
margin_bottom = 50.0
text = "Client"

[node name="target_IP" type="LineEdit" parent="Client"]
margin_left = 90.0
margin_right = 240.0
margin_bottom = 25.0
placeholder_text = "IP Adress"

[node name="Host" type="Button" parent="."]
margin_right = 90.0
margin_bottom = 25.0
text = "Host"

[node name="host_port" type="LineEdit" parent="Host"]
margin_left = 90.0
margin_right = 240.0
margin_bottom = 25.0
text = "7777"
placeholder_text = "Custom Port"

[connection signal="pressed" from="Client" to="." method="_on_Client_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_Host_pressed"]
